# webserver-toolbox

./: .allowlist.txt  .gitignore  README.md  autoblock.py  block_ips.py  blocklist.txt  blocklist_additions.txt  config.py  history.py  ignore.py  ips.py  log_reader.py  new_blocks.txt  pages.py  prepare_firewall_update.py  pyproject.toml  reader.py  targets.py  update_firewall.py  update_firewall.sh
archive/: archive.README
doc/: brandonrohrer.com.md
logs/: blocklist_starter_kit.txt  log.README
server_blocks/: brandonrohrer.com
