[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
webserver-toolbox = ["logs/*.txt", "logs/log.README"]

[project]
name = "webserver-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
]
